# Diablo_ros

./: .gitignore  README.md  policy_final.pth  q_learning_log.csv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/diablo_env_ros/share/diablo_env_ros/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/diablo_env_ros/share/diablo_env_ros/launch/: check_urdf.launch.py  world.launch.py
install/diablo_env_ros/share/diablo_env_ros/rviz/: robot.rviz
install/diablo_env_ros/share/diablo_env_ros/urdf/: robot.gazebo
log/: latest_build
src/base_class/: package.xml  setup.cfg  setup.py
src/base_class/base_class/: Q_learning_base.py  Q_learning_base_parameters.py  Q_learning_base_parameters.yaml  actor_critic_node.py  base_node_class.py  controller.py  diablo_basic_policy_node.py  diablo_ppo_env.py  diablo_reinforcement_learning_parameters.py  q_learning.py  reinforce copy.py  reinforce.py  reinforce_node.py  reinforcement_learning_node.py  reinforcement_learning_node_parameters.yaml  train_ppo_diablo.py  venv_check.py
src/diablo_env_ros/: package.xml  setup.cfg  setup.py
src/diablo_env_ros/config/: controllers.yaml  gazebo_bridge.yaml
src/diablo_env_ros/launch/: a2clearn.launch.py  check_urdf.launch.py  diablo.launch.py  learn.launch.py  ppo.launch.py  world.launch.py
src/diablo_env_ros/rviz/: rviz.rviz
src/diablo_env_ros/urdf/: description.xacro  display.xacro  robot.gazebo  robot.urdf  robot.xacro  robot_with_tower.urdf  ros2control.xacro
src/diablo_env_ros/worlds/: world.sdf
src/diablo_joint_observer/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/diablo_joint_observer/msg/: Observation.msg  observation.msg
src/simulation_control/: CMakeLists.txt  package.xml
src/simulation_control/src/: simulation_control_node.cpp
src/subscriber_to_observation_messages/: package.xml  setup.cfg  setup.py
src/subscriber_to_observation_messages/subscriber_to_observation_messages/: subscriber.py
