<package format="3">
  <name>diablo_joint_observer</name>
  <version>0.0.0</version>
  <description>ROS2 message package for Diablo joint observer</description>
  <maintainer email="joshibasu62@gmail.com">basanta-joshi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
